# p3news

./: .gitignore  README.md  pyproject.toml
.github/workflows/: scrape.yml
p3news/: __main__.py  cli.py
p3news/scrapers/: bezpecnost.py  expats.py  munipolis.py  novatrojka.py  praha3.py
src/p3news/: __main__.py
src/p3news/scrapers/: bezpecnost.py  expats.py  munipolis.py  novatrojka.py  praha3.py  zdopravy.py
