[tool.poetry]
name = "p3news"
version = "0.1.0"
description = "Honza Javorek's personal F1 news feed"
authors = ["Honza Javorek <mail@honzajavorek.cz>"]
license = "AGPL-3.0-only"
readme = "README.md"

[tool.poetry.scripts]
p3news = "p3news.__main__:main"

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.2.1"
httpx = "^0.28.1"
beautifulsoup4 = "^4.13.5"
feedgen = "^1.0.0"
mastodon-py = "^2.1.2"
diskcache = "^5.6.3"
python-slugify = "^8.0.4"
stamina = "^25.1.0"
pydantic = "^2.11.7"
feedparser = "^6.0.11"
crawlee = "^0.6.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
